# spellchecker

./: Cargo.toml
src/: errors.rs  main.rs  types.rs
