[package]
name = "word-freq-check"
version = "0.2.0"
edition = "2021"
authors = ["Mikko Kolehmainen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }